tests/fail/fail-expr2.mc
int a;
bool b;

void foo(int c, bool d)    
{
  int d;
  bool e;
  b + a; /* Error: bool + int */
}

int main()
{
  return 0;
}
